# playwright_ci_test

./: .gitignore  BACKDockerfile  Dockerfile  conftest.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: config.yml
base/: base_page.py  base_test.py  qaqaqa.py
config/: data.py  urls.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 5d88e1c7890c7470.json  65b8c89741f36698.json  7475ade93291b58d.json  7e0207b2e4e47b1.json  a29d3cdd5d1b9c29.json  bbccd64ce3d0a6a3.json  cc45cfc6c3088e71.json  fa564d5ad892d0ce.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
pages/: curreny_page.py  main_page.py  search_results_page.py
tests/: test_main.py
widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  status-chart.json  summary.json
